Import of TKR/Treex-Doc-0.08324 from CPAN.
gitpan-cpan-distribution: Treex-Doc
gitpan-cpan-version:      0.08324
gitpan-cpan-path:         TKR/Treex-Doc-0.08324.tar.gz
gitpan-cpan-author:       TKR
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 Revision history of the Treex-Doc distribution:
 
-0.07297	       2011-11-15
+0.08324        2012-02-29
+
+    - improvements in documentation
+
+0.07297        2011-11-15
 
     - the first release at CPAN - FAQ and Tutorial
 
